# gol-rs

./: Cargo.toml
src/: args.rs  bgrid.rs  gol.rs  main.rs
src/gol/: mod.rs
src/render/: cursive.rs  mod.rs
