[package]
name = "gol-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
itertools = "0.10.5"
pancurses = { version = "0.17.0", features = ["wide"] }
rayon = "1.6.0"
scopeguard = "1.1.0"
